--- a/templates/figure_form.twig
+++ b/templates/figure_form.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ModifyFigureController!{% endblock %}
+{% block title %}formulaire de figure{% endblock %}
+{% block description %} Page de création ou de modification d'une figure{% endblock %}
+{% block image %}public/image.jpg{% endblock %}
+{% block type %} <!--Note if this page is an article or a website--> {% endblock %}
+{% block url %} <!-- Site URL to complete : http://www.example.com/--> {% endblock %}
+{% block author %}Emilie Schott{% endblock %}
 
 {% block body %}
 <style>
