--- a/templates/show_figure.html.twig
+++ b/templates/show_figure.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ShowFigureController!{% endblock %}
+{% block title %} <!--Nom de la figure-->{% endblock %}
+{% block description %} Page de présentation d'une figure : <!--Nom de la figure-->{% endblock %}
+{% block image %}public/image.jpg{% endblock %}
+{% block type %} <!--Note if this page is an article or a website--> {% endblock %}
+{% block url %} <!-- Site URL to complete : http://www.example.com/--> {% endblock %}
+{% block author %}Emilie Schott{% endblock %}
 
 {% block body %}
 <style>
