--- a/templates/signin.html.twig
+++ b/templates/signin.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SigninController!{% endblock %}
+{% block title %}Connexion{% endblock %}
+{% block description %} Page de connexion au site communautaire Snowtricks{% endblock %}
+{% block image %}public/image.jpg{% endblock %}
+{% block type %} <!--Note if this page is an article or a website--> {% endblock %}
+{% block url %} <!-- Site URL to complete : http://www.example.com/--> {% endblock %}
+{% block author %}Emilie Schott{% endblock %}
 
 {% block body %}
 <style>
