Add alt attribute in logo image tag and link to homepage in logo.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,8 +37,8 @@
     <body>
         <header>
             <nav class="navbar fixed-top main-menu">
-                <a class="navbar-brand" href="#">
-                    <img src="/images/site/logo.svg" width="180" alt="">
+                <a class="navbar-brand" href="{{ path('homepage') }}#home">
+                    <img src="/images/site/logo.svg" width="180" alt="logo SnowTrics">
                 </a>
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
