--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -8,5 +8,87 @@
 {% block author %}Emilie Schott{% endblock %}
 
 {% block body %}
-    <h1>Homepage</h1>
+    <section class="hero" id="home"> 
+        <div class="container">  
+            <div class="row">
+                <div class="moto col-8 offset-2 col-md-6 offset-md-6 offset-lg-7 p-3 p-md-4 p-lg-5 align-self-end"> 
+                    <h1>SnowTricks :</h1>
+                    <h2>Apprend à surfer sur les nuages... Avec style !</h2>	
+                </div> 
+            </div>
+            <div class="down">
+                <a href="{{ path('homepage') }}#tricks">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50.5" height="50.5" viewBox="67.75 74 50.5 50.5">
+                        <g>
+                            <path class="frame" d="M68 74.25h50v50H68z"/>
+                            <path class="arrow" d="M78.109 83.173l6.306 5.664c5.218 4.783 11.953 4.783 17.166.005l.11-.101 6.201-5.567L93 115.327 78.109 83.173zM98.79 94.674c-3.76 1.566-7.82 1.566-11.58-.001l5.792 12.504 5.788-12.503z"/></svg>
+                        </g>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="mx-auto" id="tricks">
+        <div class="section-heading d-flex justify-content-start">
+            <h3 class=" my-auto pr-5">Tricks</h3>
+            <a class="btn button" href="#" role="button">Crééer</a>
+        </div>
+        <div class="section-content">
+            <div class="card col-2">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body d-flex align-items-start justify-content-between flex-wrap">
+                    <h5 class="card-heading">
+                        <a href="#">
+                            Nom figure
+                        </a>
+                    </h5>
+                    <div class="card-icon">
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30.188" height="30.25" viewBox="240.813 240.875 30.188 30.25">
+                                <path class="crud-icon" d="M240.944 269.879c-.088.305 0 .64.223.863a.894.894 0 00.623.258.846.846 0 00.241-.035l8.207-2.343-6.951-6.951-2.343 8.208zM270.139 245.503l-3.728-3.728a2.638 2.638 0 00-1.873-.775c-.704 0-1.367.276-1.866.769l-1.867 1.867 7.462 7.462 1.867-1.867a2.62 2.62 0 00.769-1.867 2.6 2.6 0 00-.764-1.861zM244.277 260.169l15.289-15.289 7.464 7.464-15.289 15.289-7.464-7.464z"/>
+                            </svg>
+                        </a>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24.625" height="30.188" viewBox="243.625 240.938 24.625 30.188">
+                                <path class="crud-icon" d="M265.781 244.781h-5.156v-.938a2.813 2.813 0 00-2.813-2.813h-3.75a2.813 2.813 0 00-2.813 2.813v.938h-5.156a2.344 2.344 0 00-2.344 2.344V249c0 .518.42.938.938.938h22.5c.518 0 .938-.42.938-.938v-1.875a2.345 2.345 0 00-2.344-2.344zm-12.656-.937a.94.94 0 01.938-.938h3.75a.94.94 0 01.938.938v.938h-5.625v-.938zM245.53 251.813a.294.294 0 00-.293.307l.773 16.233a2.81 2.81 0 002.809 2.679h14.237a2.81 2.81 0 002.81-2.679l.773-16.233a.294.294 0 00-.293-.307H245.53zm14.158 2.343a.938.938 0 011.876 0v12.188a.938.938 0 01-1.876 0v-12.188zm-4.688 0a.937.937 0 111.876 0v12.188a.938.938 0 01-1.876 0v-12.188zm-4.687 0a.937.937 0 111.876 0v12.188a.937.937 0 11-1.876 0v-12.188z"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="load d-grid gap-3">
+        <a class="btn button mx-auto" href="#" role="button">
+            <svg  xmlns="http://www.w3.org/2000/svg" width="30.438" height="30.75">
+                <g fill="#FFF">
+                    <circle cx="27.417" cy="11.412" r="2.455"/>
+                    <path opacity=".1" d="M22.416 24.719a2.463 2.463 0 01.51-2.404 2.436 2.436 0 011.696-.808 2.44 2.44 0 011.771.626 2.46 2.46 0 01.181 3.466 2.437 2.437 0 01-1.695.809 2.434 2.434 0 01-1.771-.627 2.446 2.446 0 01-.692-1.062z"/>
+                    <path opacity=".2" d="M16.847 28.33a2.456 2.456 0 011.577-3.092 2.457 2.457 0 013.093 1.577 2.457 2.457 0 01-1.576 3.092 2.456 2.456 0 01-3.092-1.575l-.002-.002z"/>
+                    <path opacity=".3" d="M10.216 28.677a2.463 2.463 0 01.999-2.816 2.447 2.447 0 011.848-.343 2.453 2.453 0 011.891 2.913 2.459 2.459 0 01-2.912 1.891 2.465 2.465 0 01-1.826-1.645z"/>
+                    <path opacity=".4" d="M4.302 25.668a2.457 2.457 0 014.669-1.523 2.464 2.464 0 01-.51 2.405 2.44 2.44 0 01-1.695.808 2.46 2.46 0 01-2.464-1.69z"/>
+                    <path opacity=".5" d="M.686 20.098a2.46 2.46 0 011.576-3.094c.625-.203 1.29-.151 1.874.146s1.017.805 1.22 1.429a2.46 2.46 0 01-1.576 3.095 2.459 2.459 0 01-3.094-1.576z"/>
+                    <path opacity=".58" d="M.337 13.464a2.458 2.458 0 012.847-3.157 2.465 2.465 0 011.826 1.644 2.458 2.458 0 01-2.846 3.159 2.467 2.467 0 01-1.827-1.646z"/>
+                    <path opacity=".65" d="M3.354 7.555a2.466 2.466 0 01.509-2.405 2.46 2.46 0 014.16.881 2.457 2.457 0 01-4.669 1.524z"/>
+                    <path opacity=".72" d="M8.921 3.936c-.418-1.287.288-2.675 1.576-3.093a2.457 2.457 0 012.946 3.449 2.44 2.44 0 01-1.429 1.221 2.458 2.458 0 01-3.093-1.577z"/>
+                    <path opacity=".8" d="M15.549 3.586A2.46 2.46 0 0118.396.428a2.464 2.464 0 011.826 1.646c.133.406.155.845.065 1.267a2.434 2.434 0 01-1.064 1.548 2.442 2.442 0 01-1.848.343 2.47 2.47 0 01-1.826-1.646z"/>
+                    <path opacity=".88" d="M21.467 6.605a2.464 2.464 0 01.51-2.404 2.458 2.458 0 014.159.881 2.464 2.464 0 01-.511 2.404 2.441 2.441 0 01-1.695.809 2.435 2.435 0 01-1.771-.628 2.429 2.429 0 01-.692-1.062z"/>
+                </g>
+            </svg>
+            <span>Charger plus...</span>
+        </a>
+    </div>
+
+    <div class="up d-flex justify-content-end">
+        <a href="{{ path('homepage') }}#home"> 
+            <svg xmlns="http://www.w3.org/2000/svg" width="50.5" height="50.5" viewBox="67.75 74 50.5 50.5">
+                <g>
+                    <path class="frame" d="M68 74.25h50v50H68z"/>
+                    <path class="arrow" d="M93 83.173l14.891 32.153-6.201-5.566-.11-.102c-5.213-4.777-11.947-4.777-17.166.006l-6.306 5.663L93 83.173zm.001 8.15l-5.792 12.505c3.76-1.568 7.82-1.568 11.58-.002l-5.788-12.503z"/></svg>
+                </g>
+            </svg>
+        </a>
+    </div>
 {% endblock %}
