--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-            <link href="style.css" rel="stylesheet" >
+            <link href="{{ asset('css/style.css') }}" rel="stylesheet" >
             <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,700;1,400;1,700&amp;family=Tomorrow:ital,wght@1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet"> 
         {% endblock %}
     </head>
@@ -38,7 +38,7 @@
         <header>
             <nav class="navbar fixed-top main-menu">
                 <a class="navbar-brand" href="{{ path('homepage') }}#home">
-                    <img src="/images/site/logo.svg" width="180" alt="logo SnowTrics">
+                    <img src="{{ asset('/images/site/logo.svg') }}" width="180" alt="logo SnowTrics">
                 </a>
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
