--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="moto col-8 offset-2 col-md-6 offset-md-6 offset-lg-7 p-3 p-md-4 p-lg-5 align-self-end"> 
                     <h1>SnowTricks :</h1>
-                    <h2>Apprend à surfer sur les nuages... Avec style !</h2>	
+                    <h2>Apprend à surfer parmi les nuages ... Avec style !</h2>	
                 </div> 
             </div>
             <div class="down">
