bug fix : figure first image doesn't display

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -37,7 +37,7 @@
         <div class="section-content">
             {% for figure in figures %}
                 <div class="card col-2">
-                    <img src="{{ figure.images.0.name }}" class="card-img-top" alt="{{ figure.images.0.alt }}">
+                    <img src="{{ asset('/images/uploads/figures') }}/{{ figure.images.0.name }}" class="card-img-top" alt="{{ figure.images.0.alt }}">
                     <div class="card-body d-flex align-items-start justify-content-between flex-wrap">
                         <h5 class="card-heading">
                             <a href="{{ path('show_figure', { slug: figure.slug}) }}">
