Minor style modifications

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -34,11 +34,11 @@
             <h3 class=" my-auto pr-5">Tricks</h3>
             <a class="btn button" href="{{ path('create_figure') }}" role="button">Crééer</a>
         </div>
-        <div class="section-content">
+        <div class="section-content col-12">
             {% for figure in figures %}
                 <div class="card col-2">
                     <img src="{{ asset('/images/uploads/figures') }}/{{ figure.images.0.name }}" class="card-img-top" alt="{{ figure.images.0.alt }}">
-                    <div class="card-body d-flex align-items-start justify-content-between flex-wrap">
+                    <div class="card-body px-1 py-auto d-flex align-items-start justify-content-between flex-wrap">
                         <h5 class="card-heading">
                             <a href="{{ path('show_figure', { slug: figure.slug}) }}">
                                 {{ figure.name }}
@@ -46,13 +46,13 @@
                         </h5>
                         <div class="card-icon">
                             <a href="{{ path('modify_figure', { slug: figure.slug}) }}">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="30.188" height="30.25" viewBox="240.813 240.875 30.188 30.25">
-                                    <path class="crud-icon" d="M240.944 269.879c-.088.305 0 .64.223.863a.894.894 0 00.623.258.846.846 0 00.241-.035l8.207-2.343-6.951-6.951-2.343 8.208zM270.139 245.503l-3.728-3.728a2.638 2.638 0 00-1.873-.775c-.704 0-1.367.276-1.866.769l-1.867 1.867 7.462 7.462 1.867-1.867a2.62 2.62 0 00.769-1.867 2.6 2.6 0 00-.764-1.861zM244.277 260.169l15.289-15.289 7.464 7.464-15.289 15.289-7.464-7.464z"/>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="5.094 7.438 20 20">
+                                    <path class="crud-icon" d="M5.119 26.69a.589.589 0 00.148.575.598.598 0 00.576.149l5.471-1.562-4.633-4.635-1.562 5.473zM24.582 10.439l-2.485-2.485a1.757 1.757 0 00-1.248-.517c-.47 0-.912.184-1.244.513L18.36 9.195l4.975 4.975 1.245-1.245c.332-.332.512-.774.512-1.244a1.739 1.739 0 00-.51-1.242zM7.341 20.217l10.192-10.193L22.509 15 12.317 25.192l-4.976-4.975z"/>
                                 </svg>
                             </a>
                             <a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24.625" height="30.188" viewBox="243.625 240.938 24.625 30.188">
-                                    <path class="crud-icon" d="M265.781 244.781h-5.156v-.938a2.813 2.813 0 00-2.813-2.813h-3.75a2.813 2.813 0 00-2.813 2.813v.938h-5.156a2.344 2.344 0 00-2.344 2.344V249c0 .518.42.938.938.938h22.5c.518 0 .938-.42.938-.938v-1.875a2.345 2.345 0 00-2.344-2.344zm-12.656-.937a.94.94 0 01.938-.938h3.75a.94.94 0 01.938.938v.938h-5.625v-.938zM245.53 251.813a.294.294 0 00-.293.307l.773 16.233a2.81 2.81 0 002.809 2.679h14.237a2.81 2.81 0 002.81-2.679l.773-16.233a.294.294 0 00-.293-.307H245.53zm14.158 2.343a.938.938 0 011.876 0v12.188a.938.938 0 01-1.876 0v-12.188zm-4.688 0a.937.937 0 111.876 0v12.188a.938.938 0 01-1.876 0v-12.188zm-4.687 0a.937.937 0 111.876 0v12.188a.937.937 0 11-1.876 0v-12.188z"/>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="2.313 5.094 20 20">
+                                    <path class="crud-icon" d="M18.875 7.594h-3.438v-.625a1.874 1.874 0 00-1.875-1.875h-2.499a1.874 1.874 0 00-1.875 1.875v.625H5.75c-.863 0-1.563.699-1.563 1.563v1.25c0 .345.28.625.625.625h14.999c.346 0 .625-.28.625-.625v-1.25a1.56 1.56 0 00-1.561-1.563zm-8.437-.625c0-.344.28-.625.625-.625h2.499c.346 0 .627.281.627.625v.625h-3.75l-.001-.625zM5.375 12.281a.196.196 0 00-.195.205l.516 10.821a1.874 1.874 0 001.872 1.786h9.491a1.873 1.873 0 001.873-1.786l.516-10.821a.197.197 0 00-.195-.205H5.375zm9.438 1.563a.625.625 0 011.252 0v8.125a.626.626 0 01-1.252 0v-8.125zm-3.125 0a.625.625 0 111.251 0v8.125a.625.625 0 01-1.251 0v-8.125zm-3.125 0a.625.625 0 111.251 0v8.125a.625.625 0 01-1.251 0v-8.125z"/>
                                 </svg>
                             </a>
                         </div>
