--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,7 @@ h1, h2, h3, h4, h5, h6 {
         color:white;
         font-size: 10px;
         padding-left: 70px;
+        margin-top: 60px;
     }
 
     .footer-menu {
@@ -206,7 +207,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (min-width: 992px) {
-    .section-content {
+    .section-tricks {
         display:flex;
         justify-content: space-between; 
         flex-wrap: wrap;
@@ -225,7 +226,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-.card {
+.section-tricks .card {
    width: 18rem; 
    margin-top:15px;
    margin-bottom:15px;
@@ -243,4 +244,95 @@ h1, h2, h3, h4, h5, h6 {
     .load {
         margin-bottom:0px;
     }
+}
+
+.presentation-body {
+    background-image: url("/images/site/main.jpg");  
+    background-attachment: fixed;
+    background-position: center -50px 0px;
+    background-size: cover;
+}
+
+.figure-presentation-page {
+ background-color: rgba(255, 255, 255, 0.80);
+ margin-top: 220px;
+}
+
+.first-image {
+    padding: 0px;
+    margin-top:-400px;
+}
+
+.figure-title
+{
+	background-color: rgba(13, 114, 156, 0.6);
+	height:400px;
+    width:400px;
+    color: white;
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+    align-items: center;
+	animation: figure-name-translation cubic-bezier(.65,.95,.64,1.02) 2000ms ;
+    position: relative;
+    top:220px;
+}
+
+@keyframes figure-name-translation
+{
+	from 
+	{
+		transform: translateX(400%);
+	}
+	to
+	{
+		transform: translateX(0%);
+	}
+}
+
+.comment-datas {
+    border-width: 2px;
+    border-color: rgba(13, 114, 156, 0.8);
+    border-style: groove;
+}
+
+.media {
+    margin:5px;
+}
+
+.media-element {
+    margin: 3px;
+}
+
+.media-element img {
+    max-width: 200px;
+}
+
+.badge {
+    background-color: rgba(13, 114, 156, 0.8);
+    font-size: 16px;
+    border-radius: 0px;
+    margin: 5px;
+}
+
+.date {
+    font-family: Titillium Web;
+    font-size: 12px;
+}
+
+.comment-userphoto {
+    padding: 0px;
+}
+
+.comment-userphoto img {
+    width:100px;
+}
+
+.comment {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.figure-comments .card {
+    height:auto;
 }
