--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
         {% endblock %}
     </head>
 
-    <body>
+    <body {% block class %}{% endblock %}>
         <header>
             <nav class="navbar fixed-top main-menu">
                 <a class="navbar-brand" href="{{ path('homepage') }}#home">
