--- a/public/css/style.css
+++ b/public/css/style.css
@@ -336,3 +336,22 @@ h1, h2, h3, h4, h5, h6 {
 .figure-comments .card {
     height:auto;
 }
+
+.leave-comment {
+    border-top: groove rgba(13, 114, 156, 0.8) 1px;
+    border-bottom: groove rgba(13, 114, 156, 0.8) 1px;
+}
+
+.comment-form button {
+    height:42px;
+    position: relative;
+    bottom:5px;
+    margin-bottom:15px;
+}
+
+.comment-field {
+    position: relative;
+    bottom:5px;
+    margin-bottom:15px;
+    padding: 0px;
+}
